--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
 	"pricePrefix": "!",
-    "generalChannelID": "846392662953033793"
+    "generalChannelID": "846392662953033793",
+    "botSpamChannelID": "848142968976048148"
 }
