add uyin feature

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
 	"pricePrefix": "!",
     "questionPrefix": "?",
+    "databasePrefix": "$",
     "generalChannelID": "846392662953033793",
     "botSpamChannelID": "848142968976048148"
 }
